Add Modal On 4 Images
More detail on 4 gallery with modal function

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 <div class="row">
         <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-2.jpg);" href="" data-target="#modalIMG" data-toggle="modal">
+          <a class="portfolio-item" style="background-image: url(img/portfolio-2.jpg);" href="" data-target="#modalIMG2" data-toggle="modal">
             <div class="details">
               <h4>Gambar 2</h4>
               <span>Klik Untuk Detail Gambar</span>
@@ -287,7 +287,7 @@
           </a>
         </div>
 
-<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG" role="dialog" tabindex="-1">
+<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG2" role="dialog" tabindex="-1">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-body mb-0 p-0">
@@ -303,7 +303,7 @@
   
 <div class="row">
         <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-3.jpg);" href="" data-target="#modalIMG" data-toggle="modal">
+          <a class="portfolio-item" style="background-image: url(img/portfolio-3.jpg);" href="" data-target="#modalIMG3" data-toggle="modal">
             <div class="details">
               <h4>Gambar 1</h4>
               <span>Klik Untuk Detail Gambar</span>
@@ -311,7 +311,7 @@
           </a>
         </div>
 
-<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG" role="dialog" tabindex="-1">
+<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG3" role="dialog" tabindex="-1">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-body mb-0 p-0">
@@ -328,7 +328,7 @@
   
 <div class="row">
         <div class="col-md-3">
-          <a class="portfolio-item" style="background-image: url(img/portfolio-4.jpg);" href="" data-target="#modalIMG" data-toggle="modal">
+          <a class="portfolio-item" style="background-image: url(img/portfolio-4.jpg);" href="" data-target="#modalIMG4" data-toggle="modal">
             <div class="details">
               <h4>Gambar 4</h4>
               <span>Klik Untuk Detail Gambar</span>
@@ -336,7 +336,7 @@
           </a>
         </div>
 
-<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG" role="dialog" tabindex="-1">
+<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="modalIMG4" role="dialog" tabindex="-1">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-body mb-0 p-0">
