--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <div class="col-md-12">
           <h3 class="section-title">Galeri</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Kami akan senang apabila kami memperlihatkan galei kami.</p>
+          <p class="section-description">Kami akan senang apabila kami memperlihatkan galeri kami.</p>
         </div>
       </div>
 
@@ -430,7 +430,7 @@
         <div class="col-md-12">
           <h3 class="section-title">Testimonials</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Erdo lide, nora porodo filece, salvam esse se, quod concedimus ses haec dicturum fuisse</p>
+          <p class="section-description">Berikut adalah testimonial customer kami tentang The Riviera</p>
         </div>
       </div>
 
@@ -438,13 +438,13 @@
         <div class="col-md-3">
           <div class="profile">
             <div class="pic"><img src="img/client-1.jpg" alt=""></div>
-            <h4>Saul Goodman</h4>
+            <h4>Hartono</h4>
             <span>Lawless Inc</span>
           </div>
         </div>
         <div class="col-md-9">
           <div class="quote">
-            <b><img src="img/quote_sign_left.png" alt=""></b> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper. <small><img src="img/quote_sign_right.png" alt=""></small>
+            <b><img src="img/quote_sign_left.png" alt=""></b>The Riviera memiliki banyak fasilitas yang sangat banyak karena letaknya sangat strategis dan saya juga dapat akses yang mudah untuk kebandara Soekarno Hatta<small><img src="img/quote_sign_right.png" alt=""></small>
           </div>
         </div>
       </div>
@@ -452,13 +452,13 @@
       <div class="row">
         <div class="col-md-9">
           <div class="quote">
-            <b><img src="img/quote_sign_left.png" alt=""></b> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis architecto beatae. <small><img src="img/quote_sign_right.png" alt=""></small>
+            <b><img src="img/quote_sign_left.png" alt=""></b>Kami sangat senang tinggal di The Riviera, lingkungan yang penuh dengan pepohonan dan berbagai fasilitas menjadikan kami nyaman di The Riviera<small><img src="img/quote_sign_right.png" alt=""></small>
           </div>
         </div>
         <div class="col-md-3">
           <div class="profile">
             <div class="pic"><img src="img/client-2.jpg" alt=""></div>
-            <h4>Sara Wilsson</h4>
+            <h4>Widyawati</h4>
             <span>Odeo Inc</span>
           </div>
         </div>
@@ -553,7 +553,7 @@
         <div class="col-md-12">
           <h3 class="section-title">Contact Us</h3>
           <div class="section-title-divider"></div>
-          <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="section-description">Kami senang anda kirim pesan kepada kami.</p>
         </div>
       </div>
 
@@ -562,17 +562,17 @@
           <div class="info">
             <div>
               <i class="fa fa-map-marker"></i>
-              <p>A108 Adam Street<br>New York, NY 535022</p>
+              <p>Jl. KH. Ahmad Dahlan Blok A, Metland Cyber City<br>Cipondoh, Tangerang, Banten 15147</p>
             </div>
 
             <div>
               <i class="fa fa-envelope"></i>
-              <p>info@example.com</p>
+              <p>info@theriviera.com</p>
             </div>
 
             <div>
               <i class="fa fa-phone"></i>
-              <p>+1 5589 55488 55s</p>
+              <p>+62-5467-4564</p>
             </div>
 
           </div>
